<resources>
    <string name="app_name">miExamen</string>
    <string name="social_banner">Best social app to make new friends</string>

    <string name="beginning_login">Login</string>
    <string name="beginning_sign_up">registrar</string>

    <string name="signup_full">Full Name</string>

    <string name="login_text_one">Let\&#39;s sign you in.</string>

    <string name="login_text_tw">welcome back. You\&#39;ve been missed!</string>
    <string name="login_username">Phone, email or username</string>
    <string name="helper_text">*Requerido</string>

    <string name="login_password">Password</string>
    <string name="login_button">sign in</string>

    <string name="login_cancel_button">Cancel</string>
    <string name="login_error_message">La contraseña debe contener almenos 6 caracteres.</string>

    <string name="search_title">Search</string>
    <string name="filter_title">Title</string>
</resources>