<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Frame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login_text_one"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/color_dark"
            />
        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/login_text_tw"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color_light"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:hint="@string/login_username"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/login_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"

            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="99dp"
            android:padding="20dp"
            android:text="@string/beginning_login"
            app:cornerRadius="50dp"
            />

    </LinearLayout>

</ScrollView>