<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFrame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login_text_one"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/color_dark"
            />
        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/login_text_tw"
            android:textSize="26sp"
            android:textColor="@color/color_light"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sigup_full_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/signup_full"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"

            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sigup_full_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sigup_user_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/login_username"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"

            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sigup_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sigup_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/login_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusTopStart="27dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sigup_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:text="@string/beginning_sign_up"
            app:cornerRadius="50dp"
            />

    </LinearLayout>

</ScrollView>