<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeginningFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        >
        <ImageView
            android:layout_width="360dp"
            android:layout_height="290dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/user_app"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/social_banner"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/beginning_login"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/purple_500"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:padding="20dp"
                android:text="@string/beginning_sign_up"
                app:cornerRadius="50dp"
                />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>